--- a/Atmos-Frontend/src/index.css
+++ b/Atmos-Frontend/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.btn-primary {
+		@apply rounded bg-secondary px-4 py-2 font-bold text-white transition duration-300 ease-in-out;
+	}
+}
