update the layout

--- a/Atmos-Frontend/src/index.css
+++ b/Atmos-Frontend/src/index.css
@@ -4,6 +4,6 @@
 
 @layer components {
 	.btn-primary {
-		@apply rounded bg-secondary px-4 py-2 font-bold text-white transition duration-300 ease-in-out;
+		@apply rounded-xl bg-secondary px-4 py-2 font-bold text-white transition duration-300 ease-in-out;
 	}
 }
