--- a/Atmos-Frontend/src/index.css
+++ b/Atmos-Frontend/src/index.css
@@ -6,4 +6,8 @@
 	.btn-primary {
 		@apply rounded-xl bg-secondary px-4 py-2 font-bold text-white transition duration-300 ease-in-out;
 	}
+
+	.h1 {
+		@apply text-4xl font-bold text-accent;
+	}
 }
