--- a/Atmos-Frontend/src/index.css
+++ b/Atmos-Frontend/src/index.css
@@ -7,6 +7,10 @@
 		@apply rounded-xl bg-secondary px-4 py-2 font-bold text-white transition duration-300 ease-in-out;
 	}
 
+	.btn-now {
+		@apply rounded-xl bg-accent px-3 py-3 font-semibold text-white transition duration-300 ease-in-out;
+	}
+
 	.h1 {
 		@apply text-4xl font-bold text-accent;
 	}
